Fixing What I've Been spacing

--- a/css/about.css
+++ b/css/about.css
@@ -264,7 +264,7 @@
   ._120 {
     display: block;
     margin: 0px 60px;
-    padding-top: 13.5vh;
+    padding-top: 13vh;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
